# zogminer

./: .gitignore  .travis.yml  LICENSE  README.md  ROADMAP.md  binding.gyp  configure.ac  index.js  jsonrpcserver.js  libOpenCL.so.dylib  logger.js  package.json  wscript
daemon/: init.js  start.js  welcome.js
docs/: zcash-pow.md
lib/: connection.js  equihash.js  node.js  opcode.js  opencl.js  peer.js  request.js  script.js  scriptinterpreter.js  storage.js  zcash.js
lib/db/mongo/: storage.js
lib/rpc/: info.js  jsonrpcclient.js  jsonrpcserver.js
lib/schema/: block.js  transaction.js
lib/utils/: binary.js  error.js  logger.js  parser.js  util.js
src/: Makefile.am  Makefile.gtest.include  Makefile.test.include  Makefile.zcash.include  a.out  cl_zogminer.cpp  cl_zogminer_kernel.h  gpusolver.cpp  gpusolver.h  init.cpp  list-gen.cl  miner.cpp  miner.h  parallel_loop.cpp  standaloneminer.cpp  test.cpp
src/crypto/: equihash.cpp
src/libstratum/: StratumClient.cpp  StratumClient.h  ZcashStratum.cpp  ZcashStratum.h  api.cpp
src/libzogminer/: cl.hpp  cl_zogminer.cpp  cl_zogminer.h  gpuconfig.h  gpusolver.cpp  gpusolver.h
src/libzogminer/kernels/: cl_zogminer_kernel.cl  cl_zogminer_kernel_age.cl
test/: gpu-list-gen.cl  list-gen.c
tests/: Makefile  cpu-eq.cpp  cpu-list  cpu-list-gen.c  eqnotes.txt  equihash.c  equihash.cl  gpu-list  gpu-list-gen.c  list-gen.cl  test  test-eq.c
tests/cl_wrapper/: CMakeLists.txt  README.txt  cl_zogminer.cpp  cl_zogminer.h  test_miner.cpp
zcutil/: build.sh  stringify_ocl.sh
